Есчо немного технических шоколадок

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
-<a class="footer" target="_blank" href="https://github.com/tgscan/ru-osint-infosec-map">Сделано на базе ru-osint-infosec-map</a>
+<a class="footer" target="_blank" href="https://t.me/intelligence_guild">Сделано специалистами @Intelligence_Guild</a>
+<a class="footer_tgscan" target="_blank" href="https://github.com/tgscan/ru-osint-infosec-map">Сделано на базе ru-osint-infosec-map</a>
 <div id="box"></div>
 <script src="static/data/nodes.js"></script>
 <script>
