Заголовок пренесён в код страницы

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
+    <title>Osint сообщество стран СНГ</title>
     <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
